# rosprojectkinetic

./: interface.md  readme.md
iqr_4b_robot-master/iqr_4b_bringup/: package.xml
iqr_4b_robot-master/iqr_4b_bringup/launch/: 502_ground.launch  502_mars.launch  iqr_bringup.launch  iqr_bringup_gazebo.launch  jackal_mars.launch  kinect_mars.launch  zhikete_academy.launch  zhikete_mars.launch  zhikete_unity.launch  zhikete_wks.launch
iqr_4b_robot-master/iqr_4b_bringup/models/ISCAS_groundplane/: model.sdf
iqr_4b_robot-master/iqr_4b_bringup/models/mars/: model.config  model.sdf
iqr_4b_robot-master/iqr_4b_bringup/models/unity_scene/: model.config  model.sdf
iqr_4b_robot-master/iqr_4b_bringup/worlds/: academy.world  gazebo-AVP_Interior_Vol.2.world  gazebo-wks.world  gazebo-wks1.world  my_world.world
iqr_4b_robot-master/iqr_4b_bringup/worlds/WKS-Gazebo/: Props_Props_0_AS1_0.stl  Props_Props_0_ASAS1_0.stl  Props_Props_0_Bqcd_01_0.stl  Props_Props_0_Bqcd_02_0.stl  Props_Props_0_Bqcd_03_0.stl  Props_Props_0_Bqcd_04_0.stl  Props_Props_0_Bqcd_05_0.stl  Props_Props_0_Bqcd_06_0.stl  Props_Props_0_Bqcd_07_0.stl  Props_Props_0_Bqcd_08_0.stl  Props_Props_0_Bqcd_09_0.stl  Props_Props_0_Bqcd_10_0.stl  Props_Props_0_Bqcd_11_0.stl  Props_Props_0_Bqcd_12_0.stl  Props_Props_0_Bqcd_13_0.stl  Props_Props_0_Cam_taizi_01_0.stl  Props_Props_0_Cam_taizi_02_0.stl  Props_Props_0_Cam_taizi_03_0.stl  Props_Props_0_Cam_taizi_04_0.stl  Props_Props_0_Cam_taizi_05_0.stl  Props_Props_0_Cam_taizi_08_0.stl  Props_Props_0_Cam_taizi_10_0.stl  Props_Props_0_Cam_taizi_11_0.stl  Props_Props_0_Cam_taizi_18_0.stl  Props_Props_0_DingBu_0_DingBu_BoLi_0.stl  Props_Props_0_F1_yizi_05_0.stl  Props_Props_0_F1_yizi_07_0.stl  Props_Props_0_F1_yizi_13_0.stl  (+150 more)
pic/depth2point/: CMakeLists.txt  depthmap2pc.m  image2pcl.cpp  obj2pcl.cpp  pose.txt  readme.txt  rotatematrix2rpy.cpp  seekPixelValue.py
(+178 files in other folders)
