<?xml version="1.0"?>
<package format="2">
  <name>iqr_4b_bringup</name>
  <version>0.3.0</version>
  <description>The iqr_4b_bringup package</description>

  <author email="yanlei@iquotient-robot.com">QuartzYan</author>
  <maintainer email="yanlei@iquotient-robot.com">QuartzYan</maintainer>

  <!-- LICENSE -->
  <license>MIT</license>

  <!-- DEPEND -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
